# retail-image-test

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  README.md
backend/app/: config.py  main.py
backend/app/routes/: brand_kits.py  gallery.py  jobs.py  templates.py
backend/app/services/: estimate.py  gallery.py  jobs.py
brand_kits/: flannels.json  frasers.json  sports-direct.json  usc.json
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/campaigns/[id]/: page.tsx
frontend/src/app/campaigns/new/: page.tsx
frontend/src/app/gallery/[id]/: page.tsx
frontend/src/app/jobs/[id]/: page.tsx
frontend/src/app/new/: page.tsx
frontend/src/components/: BrandKitCard.tsx  CostMeter.tsx  GalleryGrid.tsx  JobTimeline.tsx  TemplateCard.tsx
frontend/src/lib/: api.ts  config.ts  sse.ts  types.ts
overlay/: __init__.py  __main__.py  brand_kits.py  cli.py  compose.py  critique.py  generate.py  lockup_render.py  pipeline.py  placement.py  render.py  usage.py
overlay/templates/: __init__.py  athletic-diagonal.json  editorial-hush.json  streetwear-stack.json  value-slab.json
scenarios/: fg-finished-recreations.json  retailer-campaigns.json
scripts/: run_scenarios.py
